--- a/web/package.json
+++ b/web/package.json
@@ -4,9 +4,11 @@
   "private": true,
   "dependencies": {
     "@billjs/query-string": "^1.0.2",
+    "@date-io/moment": "1.x",
     "@material-ui/core": "^4.11.4",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.58",
+    "@material-ui/pickers": "^3.3.10",
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
